<resources>
    <string name="app_name">Tri-Hackyon</string>
    <string name="preference_file_key">trihackeon.PREFERENCE_FILE_KEY</string>
    <string name="help_app_title">What is this?</string>
    <string name="help_app_body">This is TAPE, the Trihackeon Autonomous Password Enterer (great acronym, we know). It is a password vault (think Dashlane) that, when you plug in a device, can automatically type your password in a computer.
    Although it was designed with this in mind, the device is only needed for sending passwords to a computer and the app will function without.</string>
    <string name="help_but_title">What\'s what:</string>
    <string name="help_but_authenticate"><b>Show Encrypted (Authenticate)</b>- Must be checked to modify entries, displays encrypted passwords</string>
    <string name="help_but_new"><b>Add New Password</b>- Adds a new entry</string>
    <string name="help_but_del"><b>Delete Password</b>- Deletes an existing entry</string>
    <string name="help_but_send"><b>Send a Password</b>b>- Requires a companion device, sends a password to a computer</string>
    <string name="help_but_settings"><b>Settings</b>- Changes the app password</string>
    <string name="help_link_title">Password Resources:</string>
    <string name="help_link_creating">Creating good passwords: <url>https://www.schneier.com/blog/archives/2014/03/choosing_secure_1.html</url></string>
    <string name="help_link_testing">Testing your password: <url>https://howsecureismypassword.net</url></string>
    <string name="general_back">Go Back</string>
    <string name="enter_password">Enter Password</string>
    <string name="please_create_your_password_for_encryption_use">Please Create Your Password for Encryption Use</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="delete_password">Delete Password</string>
    <string name="idCol">ID:\n</string>
    <string name="userCol">Username:\n</string>
    <string name="domCol">Domain:\n</string>
    <string name="delTextField">ID to Delete</string>
    <string name="enterTitle">Please Enter Your Password</string>
    <string name="passHint">password123</string>
    <string name="general_cancel">Cancel</string>
    <string name="helpmaintitle">Help:</string>
    <string name="add_new_password">Add New Password</string>
    <string name="auth">Show Encrypted (Authenticate)</string>
    <string name="appName">TAPE</string>
    <string name="passCol">Password:\n</string>
    <string name="sendpass">Send A Password</string>
    <string name="settings">Settings</string>
    <string name="help">help</string>
    <string name="encrypted_password">Encrypted Password</string>
    <string name="user_name">User Name</string>
    <string name="save_password">Save Password</string>
    <string name="new_password">New Password</string>
    <string name="website_name">Website Name</string>
    <string name="password">Password</string>
    <string name="newexamplesitehint">www.websitename.com</string>
    <string name="newexampleuserhint">UserName123</string>
    <string name="newexamplepasshint">Password321</string>
    <string name="generate_password">Generate Password</string>
    <string name="send">Send</string>
    <string name="send_password">Send Password</string>
    <string name="sendidfield">ID to Send</string>
    <string name="senddetecterror">IOIO Not Detected</string>
    <string name="settingsTitle">Settings:</string>
    <string name="settingsChangeTitle">Change App Password:</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="settingschangebut">Change</string>
</resources>
